deployment-chart/templates/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: name-virtual-host-ingress
spec:
    rules:
        - host: first.bar.com
          http:
              paths:
                  - backend:
                        serviceName: service1
                        servicePort: 80
        - host: second.foo.com
          http:
              paths:
                  - backend:
                        serviceName: service2
                        servicePort: 80
        - http:
              paths:
                  - backend:
                        serviceName: service3
                        servicePort: 80
